--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-	<!--<script src="https://use.fontawesome.com/5195e933ab.js"></script>-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -34,14 +33,18 @@
 	  </ol>
 	  <div class="carousel-inner">
 	    <div class="carousel-item active">
+	    <div class="carousel-shadow"></div>
 	      <img class="d-block" src="https://static.pexels.com/photos/51387/mount-everest-himalayas-nuptse-lhotse-51387.jpeg" alt="First slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block" src="https://static.pexels.com/photos/51387/mount-everest-himalayas-nuptse-lhotse-51387.jpeg" alt="Second slide">
+	      <div class="carousel-shadow"></div>
+	      <img class="d-block" src="https://static.pexels.com/photos/51387/mount-everest-himalayas-nuptse-lhotse-51387.jpeg" alt="First slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block" src="https://static.pexels.com/photos/51387/mount-everest-himalayas-nuptse-lhotse-51387.jpeg" alt="Third slide">
+	      <div class="carousel-shadow"></div>
+	      <img class="d-block" src="https://static.pexels.com/photos/51387/mount-everest-himalayas-nuptse-lhotse-51387.jpeg" alt="First slide">
 	    </div>
+	    
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
