rough draft of abous section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,29 @@
 	</div>
 </header>
 
-<section class="about"></section>
+<section class="about">
+	<hgroup class="text-center">
+		<h5>Some of our accomplishments</h5>
+		<h3>About Us</h3>
+		<span class="line"></span><i class="fa fa-star" aria-hidden="true"></i><span class="line"></span>
+	</hgroup>
+	<div>
+		<div class="text-center">
+			<div class="about__briefcase-shadow">
+				<i class="fa fa-briefcase" aria-hidden="true"></i>
+			</div>
+			<h6>Aug 2016</h6>
+			<p>"Lorem ipsum"</p>
+			<span class="line"></span><i class="fa fa-chevron-right" aria-hidden="true"></i>
+		</div>
+		<div left>
+			<h6>Investment deal inked - pulsar media stock skyrocket.</h6>
+			<span></span>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et lore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <br><br>
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
+</section>
 
 <section class="contact"></section>
 
