rough draft of contact section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,44 @@
 	</div>
 </section>
 
-<section class="contact"></section>
+<section class="contact">
+	<hgroup class="text-center">
+		<h5>Have a question?</h5>
+		<h3>Contact Us</h3>
+		<span class="line"></span><i class="fa fa-star" aria-hidden="true"></i><span class="line"></span>
+	</hgroup>
+	<div class="container">
+	  	<div class="row">
+	    	<div class="col">
+	      		<i class="fa fa-map-marker" aria-hidden="true"></i>
+				<p>1 Dundas St. West, Toronto Canada</p>
+	    	</div>
+	    	<div class="col">
+	     		<i class="fa fa-phone" aria-hidden="true"></i>
+				<p>1-888-555--5544</p>
+	    	</div>
+	    	<div class="col">
+	    		<i class="fa fa-envelope" aria-hidden="true"></i>
+				<p>info@hello.com</p>
+	    	</div>
+	  	</div>
+	</div>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15863.993627623142!2d-75.5684253!3d6.263938199999999!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sco!4v1503427173932" width="100%"" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<form>
+		<div>
+			<input type="text" name="fname" placeholder="First Name *">
+			<input type="text" name="email" placeholder="Email Address *">
+		</div>
+		<div>
+			<input type="text" name="lname" placeholder="Last Name *">
+			<input type="text" name="phone" placeholder="Phone Number">
+		</div>
+		<div>
+			<input type="text" name="message" placeholder="Message *">
+		</div>
+		<button>Submit</button>
+	</form>
+</section>
 
 <footer></footer>
 
