--- a/index.html
+++ b/index.html
@@ -94,29 +94,31 @@
 </section>
 
 <section class="contact">
-	<hgroup class="text-center">
-		<h5>Have a question?</h5>
-		<h3>Contact Us</h3>
-		<span class="line"></span><i class="fa fa-star" aria-hidden="true"></i><span class="line"></span>
-	</hgroup>
-	<div class="container">
-	  	<div class="row">
-	    	<div class="col">
-	      		<i class="fa fa-map-marker" aria-hidden="true"></i>
-				<p>1 Dundas St. West, Toronto Canada</p>
-	    	</div>
-	    	<div class="col">
-	     		<i class="fa fa-phone" aria-hidden="true"></i>
-				<p>1-888-555--5544</p>
-	    	</div>
-	    	<div class="col">
-	    		<i class="fa fa-envelope" aria-hidden="true"></i>
-				<p>info@hello.com</p>
-	    	</div>
-	  	</div>
+	<div class="padding-30">
+		<hgroup class="text-center">
+			<h5>Have a question?</h5>
+			<h3>Contact Us</h3>
+			<span class="line"></span><i class="fa fa-star" aria-hidden="true"></i><span class="line"></span>
+		</hgroup>
+		<div class="container">
+		  	<div class="row">
+		    	<div class="col-sm-12 col-md-4 text-center">
+		      		<i class="fa fa-map-marker" aria-hidden="true"></i>
+					<p>1 Dundas St. West, Toronto Canada</p>
+		    	</div>
+		    	<div class="col-sm-12 col-md-4 text-center">
+		     		<i class="fa fa-phone" aria-hidden="true"></i>
+					<p>1-888-555--5544</p>
+		    	</div>
+		    	<div class="col-sm-12 col-md-4 text-center">
+		    		<i class="fa fa-envelope" aria-hidden="true"></i>
+					<p>info@hello.com</p>
+		    	</div>
+		  	</div>
+		</div>
 	</div>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15863.993627623142!2d-75.5684253!3d6.263938199999999!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sco!4v1503427173932" width="100%"" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-	<form>
+	<form class="text-center padding-30">
 		<div>
 			<input type="text" name="fname" placeholder="First Name *">
 			<input type="text" name="email" placeholder="Email Address *">
@@ -126,13 +128,20 @@
 			<input type="text" name="phone" placeholder="Phone Number">
 		</div>
 		<div>
-			<input type="text" name="message" placeholder="Message *">
+			<textarea id="message">Message *</textarea>
 		</div>
-		<button>Submit</button>
+		<button type="button" class="btn">Submit</button>
 	</form>
 </section>
 
-<footer></footer>
+<footer class="text-center">
+	<i class="fa fa-facebook" aria-hidden="true"></i>
+	<i class="fa fa-twitter" aria-hidden="true"></i>
+	<i class="fa fa-google-plus" aria-hidden="true"></i>
+	<i class="fa fa-vine" aria-hidden="true"></i>
+	<i class="fa fa-linkedin" aria-hidden="true"></i>
+	<i class="fa fa-pinterest-p" aria-hidden="true"></i>
+</footer>
 
 <script type="text/javascript" src="schemes.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
