--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<span class="line"></span><i class="fa fa-star" aria-hidden="true"></i><span class="line"></span>
 	</hgroup>
 	<div>
-		<div class="text-center">
+		<div class="text-center about-right">
 			<div class="about__briefcase-shadow">
 				<i class="fa fa-briefcase" aria-hidden="true"></i>
 			</div>
@@ -84,7 +84,7 @@
 			<p>"Lorem ipsum"</p>
 			<span class="line"></span><i class="fa fa-chevron-right" aria-hidden="true"></i>
 		</div>
-		<div left>
+		<div class="about-left">
 			<h6>Investment deal inked - pulsar media stock skyrocket.</h6>
 			<span></span>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et lore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <br><br>
@@ -119,11 +119,11 @@
 	</div>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15863.993627623142!2d-75.5684253!3d6.263938199999999!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sco!4v1503427173932" width="100%"" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	<form class="text-center padding-30">
-		<div>
+		<div class="form__left">
 			<input type="text" name="fname" placeholder="First Name *">
 			<input type="text" name="email" placeholder="Email Address *">
 		</div>
-		<div>
+		<div class="form__right">
 			<input type="text" name="lname" placeholder="Last Name *">
 			<input type="text" name="phone" placeholder="Phone Number">
 		</div>
