--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 
+<!--START HEADER SECTION-->
 <header>
 	<nav class="nav-bar">
 	<div class="nav-bar__hamburger">
@@ -68,7 +69,9 @@
 		<div class="header__carousel"></div>
 	</div>
 </header>
+<!--END OF HEADER-->
 
+<!--START ABOUT SECTION-->
 <section class="about">
 	<hgroup class="text-center">
 		<h5>Some of our accomplishments</h5>
@@ -92,7 +95,9 @@
 		</div>
 	</div>
 </section>
+<!--END OF ABOUT SECTION-->
 
+<!--START OF CONTACT SECTION-->
 <section class="contact">
 	<div class="padding-30">
 		<hgroup class="text-center">
@@ -133,7 +138,9 @@
 		<button type="button" class="btn">Submit</button>
 	</form>
 </section>
+<!--END OF CONTACT SECTION-->
 
+<!--START OF FOOTER-->
 <footer class="text-center">
 	<i class="fa fa-facebook" aria-hidden="true"></i>
 	<i class="fa fa-twitter" aria-hidden="true"></i>
@@ -142,6 +149,7 @@
 	<i class="fa fa-linkedin" aria-hidden="true"></i>
 	<i class="fa fa-pinterest-p" aria-hidden="true"></i>
 </footer>
+<!--END OF FOOTER-->
 
 <script type="text/javascript" src="schemes.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
